Major changes between version 0.99.1 and 0.99.2.
------------------------------------------------
  - fixwrappers now checks exit status of ar to see if it succeeded
    or not.
  - Removed references to reroute and -reroute from the man page.
  - Enabled the demasq code.
  - Use a local netlink.h so we can compile with, hopefully, any
    kernel/libc combination.


Major changes between version 0.99 and 0.99.1.
------------------------------------------------
  - "make depend" now runs cc with -MM instead of -M to ignore
    system header files.
  - Map protocol numbers to names when logging debug info for
    firewall rule matches.
  - Wrong iovec count when sending packets on an ethertap proxy.
  - Moved the monitor "INTERFACE" output so that it happens
    even if an ifsetup script is used.
  - Read the full packet from the snooping socket simply because
    we want to know the length so we can count bytes in and out.
  - If we have no AF_PACKET support we are probably running on
    a 2.0 kernel so must always down interfaces rather than
    trying to delete addresses by setting the interface to 0.0.0.0.
    The all zeros address has special meaning for 2.0 kernels.
  - Transient interfaces (slip and ppp) should be downed rather
    than set to 0.0.0.0 otherwise they are considered to be in
    use by the kernel and never reused which leads to a resource
    leak.


Major changes between version 0.98.3 and 0.99.
----------------------------------------------
  - Added a "sticky" option. This is like "dynamic" but the IP
    addresses determined from an actual connection will continue
    to be used for the proxy in the future in preference to the
    originally configured addresses. This may be useful if your
    provider uses dynamic addressing but only expires address
    allocations after a relatively long period of inactivity.
  - Added a "broadcast" option. This may be used in conjunction
    with the "netmask" option to manage non-pointopoint links.