@@ -1,5 +1,7 @@
 Major changes between version 0.99.1 and 0.99.2.
 ------------------------------------------------
+  - Try and make sure the kernel setting of ip_dynaddr is non-zero
+    if we are running in "dynamic" or "sticky" mode.
   - fixwrappers now checks exit status of ar to see if it succeeded
     or not.
   - Removed references to reroute and -reroute from the man page.
